# mhl

./: .env.example  .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  pyproject.toml
api/: models.py  owm.py  serializers.py  tasks.py  urls.py  views.py
api/migrations/: 0001_initial.py
core/: __init__.py  celery.py  settings.py  urls.py
core/settings/: common.py  dev.py  prod.py
public/: index.html
public/assets/: index-ByVBrQih.js  index-t61YXO_x.css
scripts/: run.bat  setup.sh
test/: test_owm_api.py
